feat: implement token swap via bridge

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "resolveJsonModule": true,
     "moduleResolution": "node"
   },
-  "exclude": [
-    "node_modules/**/*"
-  ]
+  "ts-node": {
+    "esm": true
+  }
 }
