--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hardhat-project",
   "scripts": {
-    "bridge": "hardhat bridge"
+    "bridge": "tsx tasks/bridge.ts"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
@@ -27,6 +27,7 @@
     "chai": "4",
     "dotenv": "^16.4.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   }
 }
